Migrate backend to postgres/redis auth foundation

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,14 @@ API_KEY="CHANGE_ME"
 
 # Public URL where the app is hosted.
 APP_URL="http://localhost:3000"
+
+# Backend foundations
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/orbitdine"
+REDIS_URL="redis://localhost:6379"
+JWT_SECRET="CHANGE_ME_TO_A_LONG_RANDOM_SECRET"
+
+# Optional seeded credentials
+MANAGER_USERNAME="manager"
+MANAGER_PASSWORD="manager123"
+OWNER_USERNAME="owner"
+OWNER_PASSWORD="owner123"
